# kaozeth

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  asset_packing_instrs.json  run.ps1  run.sh  todo.txt  zf_asset_packing_instrs.json
assets/fonts/: eb_garamond_20  eb_garamond_24  eb_garamond_28  eb_garamond_32  eb_garamond_48  eb_garamond_80
assets/shader_progs/: blend  outline
assets/shaders/: blend.frag  outline.frag  outline.vert
assets/textures/: item_icons  misc  npcs  particles  player  player.zfdat  projectiles  tiles
assets_raw/fonts/: extra_chrs.txt
assets_raw/shaders/: blend.frag  glow.frag  glow.vert
code/: CMakeLists.txt
code/src/: entry.cpp  game.cpp  game.h
docs/: biomes.txt  crafting.txt  design_ideas.txt
scripts/: build_debug.ps1  build_release.ps1  clean.ps1  compile_shaders.bat  run.ps1  run_debug.ps1  run_release.ps1
scripts/windows_ninja/: clean.ps1  run_debug.ps1  run_release.ps1  run_zf_tests.ps1
src/: assets.cpp  assets.h  entry.c  entry.cpp  game.c  game.cpp  game.h  game_consts.h  inventory.c  inventory.h  items.c  lighting.c  lighting.h  npcs.c  particles.c  particles.h  pch.h  player.c  projectiles.c  sprites.h  tilemap.c  tilemap.h  tiles.c  title_screen.c  title_screen.cpp  title_screen.h  ui.c  world.c  world.h  world_enemies.cpp  world_gen.c  world_main.cpp  world_player.cpp  world_ui.c
src/world/: items.c  npcs.c  player.c  player.cpp  projectiles.c  tiles.c  world.c  world.cpp  world.h  world_gen.c  world_ui.c
